--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
     </label>
 </form>
 <label>Pilih Kota
-    <select name="Pilihan">
+    <select name="Pilih Kota">
     <option value="1">Kota Bekasi</option>
     <option value="2">Jakarta</option>
 </label>
