--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="grid-container">
             <div>
                 <h2>Lamaran</h2>
-                <p><a href="lamaran.html">Click Me</a></p>
+                <p><a href="BAB1/lamaran.html">Click Me</a></p>
             </div>
             <div>
                 <h2>Form    </h2>
-                <p><a href="form.html">Click Me</a></p>
+                <p><a href="BAB2/form.html">Click Me</a></p>
             </div>
             <div>
                 <h2>Nilai</h2>
