--- a/BAB7/Materi/index.html
+++ b/BAB7/Materi/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Selamat Datang di Web</h1>
-    <p>Ini adalah Contoh Penggunaan External CSS</p>
+    <form action="index.php" method="post">
+        <!-- form code -->
+    </form>
 </body>
 </html>
