--- a/hyperlink.html
+++ b/hyperlink.html
@@ -33,6 +33,17 @@
         <a href="BAB7/Tugas/latihan_nilai.html">Praktikum 1</a><br>
         <a href="BAB7/Tugas/latihan_diskon.html">Praktikum 2</a><br>
         <a href="BAB7/Materi/index.html">Progres</a>
+
+        <h2>BAB 8</h2>
+        <a href="BAB8/Tugas/kendaraan.php">Praktikum 1</a><br>
+        <a href="BAB8/Tugas/genap.php">Praktikum 2</a><br>
+        <a href="BAB8/Tugas/hewan.php">Praktikum 3</a><br>
+        <a href="BAB8/Tugas/ternary.php">Praktikum 4</a>
+        <a href="BAB8/Tugas/include.php">Praktikum 5</a>
+        <a href="BAB8/Materi/branchloopinc.php">Progres 1</a>
+        <a href="BAB8/Materi/header.php">Progres 2</a>
+        <a href="BAB8/Materi/menu.php">Progres 3</a>
+        
     </div>
 </body>
 </html>
